--- a/OleViewDotNet/packages.config
+++ b/OleViewDotNet/packages.config
@@ -7,4 +7,5 @@
   <package id="IronPython.StdLib" version="2.7.7" targetFramework="net46" />
   <package id="NDesk.Options" version="0.2.1" targetFramework="net40-client" />
   <package id="NtApiDotNet" version="1.1.14" targetFramework="net46" />
+  <package id="ObjectListView.Official" version="2.9.1" targetFramework="net46" />
 </packages>
